# xchat-playground

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  repro_pack.md
.github/workflows/: ci.yml
docs/: crypto-sandbox.md  known-gotchas.md  quickstart.md  replay-lab.md  repro-packs.md  webhook-harness.md
playground/: __init__.py  cli.py
playground/crypto/: __init__.py  real.py  stub.py
playground/replay/: __init__.py  diff.py  recorder.py  replayer.py
playground/repro/: __init__.py  registry.py
playground/repro/packs/: chat_webhook_not_received.py  encrypted_chat_decrypt_pending.py  encrypted_lookup_empty.py  legacy_dm_stops_after_e2ee.py  xaa_webhook_smoke_test.py
playground/simulator/: __init__.py  events.py
playground/simulator/fixtures/: chat_received.json  chat_sent.json  conversation_join.json  observed_xaa_chat_received.json  official_xaa_chat_received.json
playground/web/: app.js  index.html
playground/webhook/: __init__.py  crc.py  server.py  signature.py
tests/: test_crypto.py  test_replay.py  test_repro.py  test_server.py  test_simulator.py  test_webhook.py
web/: app.js  index.html
