[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xchat-playground"
version = "0.1.0"
description = "Local simulator & replay lab for XChat bots — debug webhooks, replay events, test E2EE flows without burning API credits"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["xchat", "x-api", "xdevplatform", "webhook", "bot", "simulator", "replay"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13.7",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "httpx>=0.27",
]

[project.scripts]
playground = "playground.cli:app"

[project.urls]
Homepage = "https://github.com/sherlock-488/xchat-playground"
Documentation = "https://github.com/sherlock-488/xchat-playground/tree/main/docs"
"Bug Tracker" = "https://github.com/sherlock-488/xchat-playground/issues"
"X Developer Forum" = "https://devcommunity.x.com"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["playground"]

[tool.hatch.build.targets.wheel.force-include]
"web" = "xchat_playground/web"
